# acvm

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  cspell.json  default.nix  deny.toml  flake.nix  release-please-config.json
.direnv/: flake-profile-1-link
.github/actions/setup/: action.yml
.github/workflows/: deny.yml  nix-checks.yml  publish-acvm-js.yml  publish.yml  release.yml  rust-udeps.yml  rust.yml  tag-release.yml  test.yml  typescript.yml
acir/: CHANGELOG.md  Cargo.toml  acir.cpp  acir.json  witness.json
acir/src/: lib.rs  opcode.rs  serialisation.rs  serialization.rs
acir/src/circuit/: black_box_functions.rs  blackbox_functions.rs  brillig.rs  directives.rs  gate.rs  mod.rs  opcode.rs  opcodes.rs
acir/src/circuit/opcodes/: black_box_function_call.rs  block.rs  memory_operation.rs  oracle_data.rs
acir/src/fallback/: mod.rs
acir/src/native_types/: arithmetic.rs  linear.rs  mod.rs  witness.rs  witness_map.rs
acir/src/native_types/expression/: mod.rs  operators.rs  ordering.rs
acir/tests/: test_program_serialization.rs
acir_field/: Benchmark_results.md  CHANGELOG.md  Cargo.toml
acir_field/src/: generic_ark.rs  lib.rs
acir_field/tests/: benchmarks.rs
acvm/: CHANGELOG.md  Cargo.toml
acvm/src/: compiler.rs  lib.rs  pwg.rs
acvm/src/compiler/: fallback.rs  mod.rs  simplify.rs
acvm/src/compiler/optimiser/: csat_optimiser.rs  general_optimiser.rs  mod.rs  r1cs_optimiser.rs
acvm/src/compiler/optimisers/: back_propagate_solutions.rs  general.rs  mod.rs
acvm/src/compiler/optimizer/: csat_optimizer.rs  general_optimizer.rs  mod.rs  r1cs_optimizer.rs
acvm/src/compiler/optimizers/: general.rs  mod.rs  range.rs  redundant_range.rs  simplify.rs
acvm/src/compiler/transformers/: csat.rs  fallback.rs  mod.rs  r1cs.rs
acvm/src/optimiser/: csat_optimiser.rs
acvm/src/pwg/: arithmetic.rs  black_box_functions.rs  blackbox.rs  block.rs  brillig.rs  directives.rs  hash.rs  logic.rs  memory_op.rs  mod.rs  oracle.rs  range.rs  sorting.rs
acvm/src/pwg/blackbox/: ecdsa.rs  fixed_base_scalar_mul.rs  hash.rs  logic.rs  mod.rs  pedersen.rs  range.rs  schnorr_verify.rs
acvm/src/pwg/blackbox/signature/: ecdsa.rs  schnorr.rs
acvm/src/pwg/directives/: mod.rs  sorting.rs
acvm/src/pwg/hash/: mod.rs
acvm/src/pwg/signature/: ecdsa.rs
acvm/src/stepwise_pwg/: attempt_blackbox.rs  attempt_opcode.rs  blocking_solver.rs  mod.rs
acvm/tests/: benchmarks.rs  solver.rs  stdlib.proptest-regressions  stdlib.rs
acvm_js/: .eslintrc.js  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  build.sh  buildPhaseCargoCommand.sh  build_all.sh  cspell.json  flake.nix  installPhase.sh  package-lock.json  package.json  rollup.config.js  tsconfig.json  web-test-runner.config.mjs
acvm_js/.github/workflows/: browser.yml  nix-checks.yml  node.yml  release.yml  rust.yml  test.yml  typescript.yml  wasm.yml
acvm_js/src/: abi.rs  acir.ts  avcm_helper_config.ts  black_box_solvers.rs  blackbox_func.ts  blackbox_solvers.ts  compression.rs  execute.rs  field_element.ts  foreign_calls.rs  index_cjs_node.ts  index_es.ts  js_execution_error.rs  js_transforms.rs  js_witness_map.rs  lib.rs  logging.rs  public_witness.rs  solve_intermediate_witness.ts  witnesses.ts
acvm_js/src/abi/: temp.rs
acvm_js/src/acvm_wasm/: cjs_node_wasm_loader.ts  es_wasm_loader.ts  loader_proxy.ts
acvm_js/src/barretenberg/: barretenberg_structures.rs  mod.rs  pedersen.rs  scalar_mul.rs  schnorr.rs
acvm_js/src/foreign_call/: inputs.rs  mod.rs  outputs.rs
acvm_js/src/js/: executionError.js
acvm_js/test/: abi_encode.test.ts  execute_circuit.test.ts  types.ts
acvm_js/test/browser/: abi_encode.test.ts  execute_circuit.test.ts  witness_conversion.test.ts
acvm_js/test/node/: abi_encode.test.ts  build_info.test.ts  execute_circuit.test.ts  witness_conversion.test.ts
acvm_js/test/shared/: addition.ts  complex_foreign_call.ts  equality_check.ts  fixed_base_scalar_mul.ts  foreign_call.ts  inner_recursion.ts  memory_op.ts  noir_program.ts  oracle.ts  pedersen.ts  schnorr_verify.ts  witness_compression.ts
acvm_wasm/: Cargo.toml  build_wasm.sh
acvm_wasm/src/: lib.rs
acvm_wasm/src/spwg_manager/: mod.rs  task_id.rs
acvm_wasm/wit/: acvm-wasm.wit
barretenberg_blackbox_solver/: Cargo.toml
blackbox_solver/: CHANGELOG.md  Cargo.toml  build.rs
blackbox_solver/src/: lib.rs
blackbox_solver/src/barretenberg/: mod.rs  pedersen.rs  scalar_mul.rs  schnorr.rs
blackbox_solver/src/barretenberg/wasm/: mod.rs  pedersen.rs  scalar_mul.rs
brillig/: CHANGELOG.md  Cargo.toml
brillig/src/: black_box.rs  lib.rs  opcodes.rs  value.rs
brillig_bytecode/: Cargo.toml
brillig_bytecode/src/: builder.rs  lib.rs  memory.rs  opcodes.rs  registers.rs  value.rs
brillig_vm/: CHANGELOG.md  Cargo.toml
brillig_vm/src/: arithmetic.rs  black_box.rs  foreign_call.rs  lib.rs  opcodes.rs  registers.rs  value.rs
crates/acir/: Cargo.toml
crates/acir/src/native_types/: arithmetic.rs  linear.rs  witness.rs
crates/acir/src/optimiser/: csat_optimiser.rs  general_optimiser.rs
crates/acir_field/: Cargo.toml
crates/acvm/: Cargo.toml
crates/acvm/src/pwg/: arithmetic.rs  logic.rs
crates/acvm/src/pwg/signature/: ecdsa.rs
stdlib/: CHANGELOG.md  Cargo.toml
stdlib/src/: fallback.rs  helpers.rs  lib.rs
stdlib/src/blackbox_fallbacks/: blake2s.rs  hash_to_field.rs  keccak256.rs  logic_fallbacks.rs  mod.rs  sha256.rs  uint.rs  uint32.rs  uint64.rs  uint8.rs  utils.rs  wu32.rs
stdlib/src/custom_gate_fallbacks/: mod.rs  sha256.rs  sha256_u32.rs  utils.rs
