[workspace]

members = ["acir_field", "acir", "acvm", "stdlib", "brillig_vm"]

[workspace.package]
authors = ["The Noir Team <team@noir-lang.org>"]
edition = "2021"
license = "MIT"
rust-version = "1.66"
repository = "https://github.com/noir-lang/acvm/"

[workspace.dependencies]
acir = { version = "0.16.0", path = "acir", default-features = false }
acir_field = { version = "0.16.0", path = "acir_field", default-features = false }
stdlib = { package = "acvm_stdlib", version = "0.16.0", path = "stdlib", default-features = false }
rmp-serde = "1.1.0"

num-bigint = "0.4"
num-traits = "0.2"

thiserror = "1.0.21"

serde = { version = "1.0.136", features = ["derive"] }
blake2 = "0.10.6"
sha2 = "0.10.6"
sha3 = "0.10.6"
k256 = { version = "0.11.0", features = [
    "ecdsa",
    "ecdsa-core",
    "sha256",
    "digest",
    "arithmetic",
] }
