[workspace]

members = ["acir_field", "acir", "acvm", "stdlib", "brillig", "brillig_vm", "blackbox_solver"]

[workspace.package]
authors = ["The Noir Team <team@noir-lang.org>"]
edition = "2021"
license = "MIT"
rust-version = "1.66"
repository = "https://github.com/noir-lang/acvm/"

[workspace.dependencies]
acir = { version = "0.20.1", path = "acir", default-features = false }
acir_field = { version = "0.20.1", path = "acir_field", default-features = false }
stdlib = { package = "acvm_stdlib", version = "0.20.1", path = "stdlib", default-features = false }
brillig = { version = "0.20.1", path = "brillig", default-features = false }
blackbox_solver = { package = "acvm_blackbox_solver", version = "0.20.1", path = "blackbox_solver", default-features = false }

bincode = "1.3.3"

num-bigint = "0.4"
num-traits = "0.2"

thiserror = "1.0.21"


serde = { version = "1.0.136", features = ["derive"] }
