[package]
name = "acir"
description = "ACIR is the IR that the VM processes, it is analogous to LLVM IR"
version = "0.15.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acir_field.workspace = true
serde.workspace = true
brillig_vm = { version = "0.15.0", path = "../brillig_vm", default-features = false }
thiserror.workspace = true

rmp-serde = "1.1.0"
flate2 = "1.0.24"

[dev-dependencies]
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"

[features]
default = ["bn254"]
bn254 = ["acir_field/bn254", "brillig_vm/bn254"]
bls12_381 = ["acir_field/bls12_381", "brillig_vm/bls12_381"]
