[package]
name = "acir_field"
description = "The field implementation being used by ACIR."
version = "0.6.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex.workspace = true
num-bigint.workspace = true
serde.workspace = true


ark-bn254 = { version = "^0.4.0", optional = true, default-features = false, features = [
    "curve",
] }
ark-bls12-381 = { version = "^0.4.0", optional = true, default-features = false, features = [
    "curve",
] }
ark-ff = { version = "^0.4.0", optional = true, default-features = false }

cfg-if = "1.0.0"

[features]
default = ["bn254"]
bn254 = ["ark-bn254", "ark-ff"]
bls12_381 = ["ark-bls12-381", "ark-ff"]
