[package]
name = "acvm"
description = "The virtual machine that processes ACIR given a backend/proof system."
version = "0.15.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint.workspace = true
num-traits.workspace = true
thiserror.workspace = true

acir.workspace = true
stdlib.workspace = true

blake2 = "0.10.6"
sha2 = "0.10.6"
sha3 = "0.10.6"
k256 = { version = "0.11.0", features = [
    "ecdsa",
    "ecdsa-core",
    "sha256",
    "digest",
    "arithmetic",
] }
indexmap = "1.7.0"
async-trait = "0.1"

[features]
default = ["bn254"]
bn254 = ["acir/bn254", "stdlib/bn254"]
bls12_381 = ["acir/bls12_381", "stdlib/bls12_381"]

[dev-dependencies]
rand = "0.8.5"
