[package]
name = "acvm_js"
description = "Typescript wrapper around the ACVM allowing execution of ACIR code"
version = "0.0.0" # x-release-please-version
authors = ["The Noir Team <team@noir-lang.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/noir-lang/acvm_js"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
acvm = "0.16.0"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.36"
serde = { version = "1.0.136", features = ["derive"] }
log = "0.4.17"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
gloo-utils = { version = "0.1", features = ["serde"] }
js-sys = "0.3.62"
const-str = "0.5.5"

# Barretenberg WASM dependencies
thiserror = "1.0.21"
getrandom = { version = "0.2", features = [ "js" ]}
rust-embed = { version = "6.6.0", features = [
    "debug-embed",
    "interpolate-folder-path",
    "include-exclude",
] }
wasmer = { version = "3.3", default-features = false, features = [ "js-default" ] }

[build-dependencies]
build-data = "0.1.3"
pkg-config = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
