[package]
name = "acvm_js"
description = "Typescript wrapper around the ACVM allowing execution of ACIR code"
version = "0.21.0" # x-release-please-version
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
acvm = { version = "0.21.0", path = "../acvm", default-features = false }
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.36"
serde = { version = "1.0.136", features = ["derive"] }
log = "0.4.17"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
gloo-utils = { version = "0.1", features = ["serde"] }
js-sys = "0.3.62"
const-str = "0.5.5"

# Barretenberg WASM dependencies
thiserror = "1.0.21"
getrandom = { version = "0.2", features = [ "js" ]}
rust-embed = { version = "6.6.0", features = [
    "debug-embed",
    "interpolate-folder-path",
    "include-exclude",
] }
wasmer = { version = "3.3", default-features = false, features = [ "js-default" ] }

[build-dependencies]
build-data = "0.1.3"
pkg-config = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[features]
default = ["bn254"]
bn254 = ["acvm/bn254"]
bls12_381 = ["acvm/bls12_381"]

