[package]
name = "acvm_blackbox_solver"
description = "A solver for the blackbox functions found in ACIR and Brillig"
version = "0.17.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acir_field.workspace = true
acir.workspace = true
blake2.workspace = true
sha2.workspace = true
sha3.workspace = true
k256.workspace = true
p256.workspace = true
thiserror.workspace = true

[features]
default = ["bn254"]
bn254 = ["acir_field/bn254"]
bls12_381 = ["acir_field/bls12_381"]
