[package]
name = "acvm_blackbox_solver"
description = "A solver for the blackbox functions found in ACIR and Brillig"
version = "0.21.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acir.workspace = true
thiserror.workspace = true

blake2 = "0.10.6"
sha2 = "0.10.6"
sha3 = "0.10.6"
k256 = { version = "0.11.0", features = [
    "ecdsa",
    "ecdsa-core",
    "sha256",
    "digest",
    "arithmetic",
] }
p256 = { version = "0.11.0", features = [
    "ecdsa",
    "ecdsa-core",
    "sha256",
    "digest",
    "arithmetic",
] }


# Native
barretenberg-sys = { version = "0.2.0", optional = true }

# Barretenberg WASM dependencies
rust-embed = { version = "6.6.0", optional = true, features = [
    "debug-embed",
    "interpolate-folder-path",
    "include-exclude",
] }

# WASM imports differ based on target
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmer = { version = "3.3", default-features = false, features = [ "js-default" ], optional = true }
getrandom = { version = "0.2", features = [ "js" ], optional = true}
wasm-bindgen-futures = { version = "0.4.36" , optional = true }
js-sys = { version = "0.3.62" , optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.2", optional = true }
wasmer = { version = "3.3", optional = true }


[build-dependencies]
pkg-config = "0.3"

[features]
default = ["bn254", "wasm"]
bn254 = ["acir/bn254"]
bls12_381 = ["acir/bls12_381"]
native = ["dep:barretenberg-sys"]
wasm = ["dep:wasmer", "dep:rust-embed", "dep:getrandom"]
