[package]
name = "brillig_vm"
description = "The virtual machine that processes Brillig bytecode, used to introduce non-determinism to the ACVM"
version = "0.15.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acir_field.workspace = true
serde.workspace = true
blake2 = "0.10.6"
sha2 = "0.10.6"
sha3 = "0.10.6"
k256 = { version = "0.11.0", features = [
    "ecdsa",
    "ecdsa-core",
    "sha256",
    "digest",
    "arithmetic",
] }

[features]
default = ["bn254"]
bn254 = ["acir_field/bn254"]
bls12_381 = ["acir_field/bls12_381"]
