[package]
name = "brillig_vm"
description = "The virtual machine that processes Brillig bytecode, used to introduce non-determinism to the ACVM"
version = "0.18.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acir_field.workspace = true
acir.workspace = true
brillig.workspace = true
blackbox_solver.workspace = true

[features]
default = ["bn254"]
bn254 = ["acir_field/bn254", "acir/bn254", "brillig/bn254"]
bls12_381 = ["acir_field/bls12_381", "acir/bls12_381", "brillig/bls12_381"]
