[package]
name = "acvm_stdlib"
version = "0.8.1"
edition = "2021"
license = "MIT"
description = "The ACVM standard library."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acir = { version = "0.8.1", path = "../acir", features = ["bn254"] }
