[package]
name = "acvm_stdlib"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "The ACVM standard library."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acir.workspace = true

[features]
bn254 = ["acir/bn254"]
bls12_381 = ["acir/bls12_381"]
